--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
+<h3>Etch-a-Sketch</h3>
+<button id="clear">Clear</button>
 <div id="container">
 
 </div>
