--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h3>Etch-a-Sketch</h3>
-<button id="clear">Clear</button>
+<div class="butt"><button id="clear">Clear</button></div>
 <div id="container">
 
 </div>
